# gen-ai-bootcamp-2025

./: Readme.MD
Week 4/text-adventure/backend/: pyproject.toml  requirements.txt  run_server.py
Week 4/text-adventure/backend/ai/companion/: README.md
Week 4/text-adventure/backend/ai/companion/api/: companion_api.py
Week 4/text-adventure/backend/ai/companion/core/: player_history_manager.py  processor_framework.py  prompt_manager.py  request_handler.py
Week 4/text-adventure/backend/ai/companion/learning/: __init__.py  grammar_templates.py  learning_pace.py
Week 4/text-adventure/backend/ai/companion/personality/: __init__.py
Week 4/text-adventure/backend/ai/companion/tier1/: __init__.py  pattern_matching.py  tier1_processor.py
Week 4/text-adventure/backend/ai/companion/tier3/: __init__.py  bedrock_client.py  conversation_manager.py  prompt_engineering.py  prompt_optimizer.py  specialized_handlers.py  test_conversation_manager.py
Week 4/text-adventure/backend/ai/companion/utils/: http_client.py  monitoring.py  retry.py
Week 4/text-adventure/backend/api/adapters/: base.py  companion_assist.py  deepseek_parameters.py  dialogue_process.py  npc_dialogue.py
Week 4/text-adventure/backend/api/middleware/: __init__.py  error_handler.py
Week 4/text-adventure/backend/api/models/: companion_assist.py  deepseek_parameters.py  npc.py  player_progress.py
Week 4/text-adventure/backend/api/routers/: companion.py  deepseek_parameters.py  dialogue.py  game_state.py
Week 4/text-adventure/backend/data/: game_state.py  npc_dialogue.py  player.py
gemini-tools/: main.py
(+210 files in other folders)
